modified monthly report

--- a/web.config
+++ b/web.config
@@ -8,8 +8,8 @@
 <configuration>
   <connectionStrings>
     <add name="installedDB" connectionString="mssql" />
-    <add name="mssqlConnectionStringLocal" connectionString="Server=(local);Database=pids; uid=sa; pwd=phenomenon@1; Trusted_Connection=False" providerName="System.Data.SqlClient" />
-    <add name="mssqlConnectionString" connectionString="Server=74.208.72.76;Database=pids; uid=pids; pwd=pids@1; Trusted_Connection=False" providerName="System.Data.SqlClient" />
+    <add name="mssqlConnectionStringLocal" connectionString="Server=.\sqlexpress;Database=pids; uid=sa; pwd=P@ssw0rd; Trusted_Connection=False" providerName="System.Data.SqlClient" />
+    <add name="mssqlConnectionString" connectionString="Server=.\sqlexpress;initial catalog=PID_New;User ID=sa;Password=P@ssw0rd; Trusted_Connection=False" providerName="System.Data.SqlClient" />
     <add name="odbcConnectionString" connectionString="Driver={SQL Server}; Server=(local); Database=microfin3; uid=sa; pwd=phenomenon@1; User ID=sa; Password=phenomenon@1;" providerName="System.Data.Odbc" />
   </connectionStrings>
     <system.web>
