--- a/web.config
+++ b/web.config
@@ -9,7 +9,7 @@
   <connectionStrings>
     <add name="installedDB" connectionString="mssql" />
     <add name="mssqlConnectionStringLocal" connectionString="Server=.\sqlexpress;Database=pids; uid=sa; pwd=P@ssw0rd; Trusted_Connection=False" providerName="System.Data.SqlClient" />
-    <add name="mssqlConnectionString" connectionString="Server=.\sqlexpress;initial catalog=PID_New;User ID=sa;Password=P@ssw0rd; Trusted_Connection=False" providerName="System.Data.SqlClient" />
+    <add name="mssqlConnectionString" connectionString="Server=.\sqlexpress;initial catalog=PIDs;User ID=sa;Password=P@ssw0rd; Trusted_Connection=False" providerName="System.Data.SqlClient" />
     <add name="odbcConnectionString" connectionString="Driver={SQL Server}; Server=(local); Database=microfin3; uid=sa; pwd=phenomenon@1; User ID=sa; Password=phenomenon@1;" providerName="System.Data.Odbc" />
   </connectionStrings>
     <system.web>
